--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </div>
             </button>
 
-            <button class="catalog__item track">
+            <button class="catalog__item track track_active">
                 <div class="track__img-wrap">
                     <img src="img/foto2.jpg"
                          alt="Save your tears - The weeknd"
@@ -235,6 +235,14 @@
                     <p class="track__title">Save your tears</p>
                     <p class="track__artist">The weeknd</p>
                 </div>
+            </button>
+
+            <button class="catalog__btn-add">
+                <span>Увидеть всё</span>
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M8.59 16.59L13.17 12L8.59 7.41L10 6L16 12L10 18L8.59 16.59Z"/>
+                </svg>
+
             </button>
 
         </div>
