--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
                     >
                 </div>
 
-                <div class="track__info">
-                    <p class="track__title">Save your tears</p>
-                    <p class="track__artist">The weeknd</p>
+                <div class="track__info track-info">
+                    <p class="track-info__title">Save your tears</p>
+                    <p class="track-info__artist">The weeknd</p>
                 </div>
             </button>
 
@@ -71,9 +71,9 @@
                     >
                 </div>
 
-                <div class="track__info">
-                    <p class="track__title">Save your tears</p>
-                    <p class="track__artist">The weeknd</p>
+                <div class="track__info track-info">
+                    <p class="track-info__title">Save your tears</p>
+                    <p class="track-info__artist">The weeknd</p>
                 </div>
             </button>
 
@@ -87,9 +87,9 @@
                     >
                 </div>
 
-                <div class="track__info">
-                    <p class="track__title">Save your tears</p>
-                    <p class="track__artist">The weeknd</p>
+                <div class="track__info track-info">
+                    <p class="track-info__title">Save your tears</p>
+                    <p class="track-info__artist">The weeknd</p>
                 </div>
             </button>
 
@@ -103,9 +103,9 @@
                     >
                 </div>
 
-                <div class="track__info">
-                    <p class="track__title">Save your tears</p>
-                    <p class="track__artist">The weeknd</p>
+                <div class="track__info track-info">
+                    <p class="track-info__title">Save your tears</p>
+                    <p class="track-info__artist">The weeknd</p>
                 </div>
             </button>
 
@@ -119,9 +119,9 @@
                     >
                 </div>
 
-                <div class="track__info">
-                    <p class="track__title">Save your tears</p>
-                    <p class="track__artist">The weeknd</p>
+                <div class="track__info track-info">
+                    <p class="track-info__title">Save your tears</p>
+                    <p class="track-info__artist">The weeknd</p>
                 </div>
             </button>
 
@@ -135,9 +135,9 @@
                     >
                 </div>
 
-                <div class="track__info">
-                    <p class="track__title">Save your tears</p>
-                    <p class="track__artist">The weeknd</p>
+                <div class="track__info track-info">
+                    <p class="track-info__title">Save your tears</p>
+                    <p class="track-info__artist">The weeknd</p>
                 </div>
             </button>
 
@@ -151,9 +151,9 @@
                     >
                 </div>
 
-                <div class="track__info">
-                    <p class="track__title">Save your tears</p>
-                    <p class="track__artist">The weeknd</p>
+                <div class="track__info track-info">
+                    <p class="track-info__title">Save your tears</p>
+                    <p class="track-info__artist">The weeknd</p>
                 </div>
             </button>
 
@@ -167,9 +167,9 @@
                     >
                 </div>
 
-                <div class="track__info">
-                    <p class="track__title">Save your tears</p>
-                    <p class="track__artist">The weeknd</p>
+                <div class="track__info track-info">
+                    <p class="track-info__title">Save your tears</p>
+                    <p class="track-info__artist">The weeknd</p>
                 </div>
             </button>
 
@@ -183,9 +183,9 @@
                     >
                 </div>
 
-                <div class="track__info">
-                    <p class="track__title">Save your tears</p>
-                    <p class="track__artist">The weeknd</p>
+                <div class="track__info track-info">
+                    <p class="track-info__title">Save your tears</p>
+                    <p class="track-info__artist">The weeknd</p>
                 </div>
             </button>
 
@@ -199,9 +199,9 @@
                     >
                 </div>
 
-                <div class="track__info">
-                    <p class="track__title">Save your tears</p>
-                    <p class="track__artist">The weeknd</p>
+                <div class="track__info track-info">
+                    <p class="track-info__title">Save your tears</p>
+                    <p class="track-info__artist">The weeknd</p>
                 </div>
             </button>
 
@@ -215,9 +215,9 @@
                     >
                 </div>
 
-                <div class="track__info">
-                    <p class="track__title">Save your tears</p>
-                    <p class="track__artist">The weeknd</p>
+                <div class="track__info track-info">
+                    <p class="track-info__title">Save your tears</p>
+                    <p class="track-info__artist">The weeknd</p>
                 </div>
             </button>
 
@@ -231,9 +231,9 @@
                     >
                 </div>
 
-                <div class="track__info">
-                    <p class="track__title">Save your tears</p>
-                    <p class="track__artist">The weeknd</p>
+                <div class="track__info track-info">
+                    <p class="track-info__title">Save your tears</p>
+                    <p class="track-info__artist">The weeknd</p>
                 </div>
             </button>
 
@@ -250,13 +250,14 @@
 
     <section class="player player_condition_active">
         <h2 class="visually-hidden">Плеер</h2>
+
         <div class="player__container">
-            <div class="track__info player__track-info">
-                <p class="track__title">Save your tears</p>
-                <p class="track__artist">The weeknd</p>
+            <div class=" player__track-info track-info">
+                <p class="track-info__title">Save your tears</p>
+                <p class="track-info__artist">The weeknd</p>
             </div>
 
-            <div class="player_controller">
+            <div class="player__controller">
                 <button class="player__icon player__icon_condition_stop"></button>
                 <button class="player__icon player__icon_condition_prev"></button>
                 <button class="player__icon player__icon_condition_pause"></button>
@@ -269,8 +270,9 @@
                     <input class="player__progress-input" type="range" max="100" min="0" value="0">
                 </div>
 
-                <p class="player__item">
+                <p class="player__time">
                     <span class="player__time-passed">0:24</span>
+                    <span class="player__time-passed">/</span>
                     <span class="player__time-total">4:31</span>
                 </p>
             </div>
