--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <meta name="theme-color" content="#e91616">
 
     <link rel="stylesheet" href="css/main.css">
+    <script defer src="js/main.js"></script>
 
     <title>OwnMusic</title>
 </head>
@@ -45,10 +46,10 @@
     <section class="catalog">
         <h2 class="visually-hidden">Список треков</h2>
         <div class="catalog__container">
-            <button class="catalog__item track">
+            <button class="catalog__item track" data-track="audio/The weeknd - Save your tears.mp3">
                 <div class="track__img-wrap">
                     <img src="img/foto1.jpg"
-                         alt="Save your tears - The weeknd"
+                         alt="The weeknd - Save your tears"
                          class="track__poster"
                          width="180"
                          height="180"
@@ -61,10 +62,10 @@
                 </div>
             </button>
 
-            <button class="catalog__item track track_active">
+            <button class="catalog__item track" data-track="audio/Imagine Dragons - Follow You.mp3">
                 <div class="track__img-wrap">
                     <img src="img/foto2.jpg"
-                         alt="Save your tears - The weeknd"
+                         alt="Imagine Dragons - Follow You"
                          class="track__poster"
                          width="180"
                          height="180"
@@ -72,12 +73,12 @@
                 </div>
 
                 <div class="track__info track-info">
-                    <p class="track-info__title">Save your tears</p>
-                    <p class="track-info__artist">The weeknd</p>
+                    <p class="track-info__title">Follow You</p>
+                    <p class="track-info__artist">Imagine Dragons</p>
                 </div>
             </button>
 
-            <button class="catalog__item track">
+            <button class="catalog__item track" data-track="audio/">
                 <div class="track__img-wrap">
                     <img src="img/foto3.jpg"
                          alt="Save your tears - The weeknd"
@@ -88,12 +89,12 @@
                 </div>
 
                 <div class="track__info track-info">
-                    <p class="track-info__title">Save your tears</p>
-                    <p class="track-info__artist">The weeknd</p>
+                    <p class="track-info__title"></p>
+                    <p class="track-info__artist"></p>
                 </div>
             </button>
 
-            <button class="catalog__item track">
+            <button class="catalog__item track" data-track="audio/">
                 <div class="track__img-wrap">
                     <img src="img/foto4.jpg"
                          alt="Save your tears - The weeknd"
@@ -104,12 +105,12 @@
                 </div>
 
                 <div class="track__info track-info">
-                    <p class="track-info__title">Save your tears</p>
-                    <p class="track-info__artist">The weeknd</p>
+                    <p class="track-info__title"></p>
+                    <p class="track-info__artist"></p>
                 </div>
             </button>
 
-            <button class="catalog__item track">
+            <button class="catalog__item track" data-track="audio/">
                 <div class="track__img-wrap">
                     <img src="img/foto5.jpg"
                          alt="Save your tears - The weeknd"
@@ -120,12 +121,12 @@
                 </div>
 
                 <div class="track__info track-info">
-                    <p class="track-info__title">Save your tears</p>
-                    <p class="track-info__artist">The weeknd</p>
+                    <p class="track-info__title"></p>
+                    <p class="track-info__artist"></p>
                 </div>
             </button>
 
-            <button class="catalog__item track">
+            <button class="catalog__item track" data-track="audio/">
                 <div class="track__img-wrap">
                     <img src="img/foto6.jpg"
                          alt="Save your tears - The weeknd"
@@ -136,12 +137,12 @@
                 </div>
 
                 <div class="track__info track-info">
-                    <p class="track-info__title">Save your tears</p>
-                    <p class="track-info__artist">The weeknd</p>
+                    <p class="track-info__title"></p>
+                    <p class="track-info__artist"></p>
                 </div>
             </button>
 
-            <button class="catalog__item track">
+            <button class="catalog__item track" data-track="audio/">
                 <div class="track__img-wrap">
                     <img src="img/photo7.jpg"
                          alt="Save your tears - The weeknd"
@@ -152,12 +153,12 @@
                 </div>
 
                 <div class="track__info track-info">
-                    <p class="track-info__title">Save your tears</p>
-                    <p class="track-info__artist">The weeknd</p>
+                    <p class="track-info__title"></p>
+                    <p class="track-info__artist"></p>
                 </div>
             </button>
 
-            <button class="catalog__item track">
+            <button class="catalog__item track" data-track="audio/">
                 <div class="track__img-wrap">
                     <img src="img/photo8.jpg"
                          alt="Save your tears - The weeknd"
@@ -168,12 +169,12 @@
                 </div>
 
                 <div class="track__info track-info">
-                    <p class="track-info__title">Save your tears</p>
-                    <p class="track-info__artist">The weeknd</p>
+                    <p class="track-info__title"></p>
+                    <p class="track-info__artist"></p>
                 </div>
             </button>
 
-            <button class="catalog__item track">
+            <button class="catalog__item track" data-track="audio/">
                 <div class="track__img-wrap">
                     <img src="img/photo9.jpg"
                          alt="Save your tears - The weeknd"
@@ -184,12 +185,12 @@
                 </div>
 
                 <div class="track__info track-info">
-                    <p class="track-info__title">Save your tears</p>
-                    <p class="track-info__artist">The weeknd</p>
+                    <p class="track-info__title"></p>
+                    <p class="track-info__artist"></p>
                 </div>
             </button>
 
-            <button class="catalog__item track">
+            <button class="catalog__item track" data-track="audio/">
                 <div class="track__img-wrap">
                     <img src="img/photo10.jpg"
                          alt="Save your tears - The weeknd"
@@ -200,12 +201,12 @@
                 </div>
 
                 <div class="track__info track-info">
-                    <p class="track-info__title">Save your tears</p>
-                    <p class="track-info__artist">The weeknd</p>
+                    <p class="track-info__title"></p>
+                    <p class="track-info__artist"></p>
                 </div>
             </button>
 
-            <button class="catalog__item track">
+            <button class="catalog__item track" data-track="audio/">
                 <div class="track__img-wrap">
                     <img src="img/photo11.jpg"
                          alt="Save your tears - The weeknd"
@@ -216,12 +217,12 @@
                 </div>
 
                 <div class="track__info track-info">
-                    <p class="track-info__title">Save your tears</p>
-                    <p class="track-info__artist">The weeknd</p>
+                    <p class="track-info__title"></p>
+                    <p class="track-info__artist"></p>
                 </div>
             </button>
 
-            <button class="catalog__item track">
+            <button class="catalog__item track" data-track="audio/">
                 <div class="track__img-wrap">
                     <img src="img/photo12.jpg"
                          alt="Save your tears - The weeknd"
@@ -232,8 +233,8 @@
                 </div>
 
                 <div class="track__info track-info">
-                    <p class="track-info__title">Save your tears</p>
-                    <p class="track-info__artist">The weeknd</p>
+                    <p class="track-info__title"></p>
+                    <p class="track-info__artist"></p>
                 </div>
             </button>
 
@@ -248,21 +249,21 @@
         </div>
     </section>
 
-    <section class="player player_condition_active">
+    <section class="player">
         <h2 class="visually-hidden">Плеер</h2>
 
         <div class="player__container">
-            <div class=" player__track-info track-info">
+            <div class=" player__track-info track-info track-info_mobile-center">
                 <p class="track-info__title">Save your tears</p>
                 <p class="track-info__artist">The weeknd</p>
             </div>
 
             <div class="player__controller">
-                <button class="player__icon player__icon_condition_stop"></button>
-                <button class="player__icon player__icon_condition_prev"></button>
-                <button class="player__icon player__icon_condition_pause"></button>
-                <button class="player__icon player__icon_condition_next"></button>
-                <button class="player__icon player__icon_condition_like"></button>
+                <button class="player__icon player__icon_condition_stop player__controller-stop" ></button>
+                <button class="player__icon player__icon_condition_prev player__controller-prev" ></button>
+                <button class="player__icon player__icon_condition_pause player__controller-pause" ></button>
+                <button class="player__icon player__icon_condition_next player__controller-next" ></button>
+                <button class="player__icon player__icon_condition_like player__controller-like" ></button>
             </div>
 
             <div class="player__progress-wrap">
