--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="catalog__container">
             <button class="catalog__item track" data-track="audio/The weeknd - Save your tears.mp3">
                 <div class="track__img-wrap">
-                    <img src="img/foto1.jpg"
+                    <img src="img/photo1.jpg"
                          alt="The weeknd - Save your tears"
                          class="track__poster"
                          width="180"
@@ -64,7 +64,7 @@
 
             <button class="catalog__item track" data-track="audio/Imagine Dragons - Follow You.mp3">
                 <div class="track__img-wrap">
-                    <img src="img/foto2.jpg"
+                    <img src="img/photo2.jpg"
                          alt="Imagine Dragons - Follow You"
                          class="track__poster"
                          width="180"
@@ -80,7 +80,7 @@
 
             <button class="catalog__item track" data-track="audio/">
                 <div class="track__img-wrap">
-                    <img src="img/foto3.jpg"
+                    <img src="img/photo3.jpg"
                          alt="Save your tears - The weeknd"
                          class="track__poster"
                          width="180"
@@ -96,7 +96,7 @@
 
             <button class="catalog__item track" data-track="audio/">
                 <div class="track__img-wrap">
-                    <img src="img/foto4.jpg"
+                    <img src="img/photo4.jpg"
                          alt="Save your tears - The weeknd"
                          class="track__poster"
                          width="180"
@@ -112,7 +112,7 @@
 
             <button class="catalog__item track" data-track="audio/">
                 <div class="track__img-wrap">
-                    <img src="img/foto5.jpg"
+                    <img src="img/photo5.jpg"
                          alt="Save your tears - The weeknd"
                          class="track__poster"
                          width="180"
@@ -128,7 +128,7 @@
 
             <button class="catalog__item track" data-track="audio/">
                 <div class="track__img-wrap">
-                    <img src="img/foto6.jpg"
+                    <img src="img/photo6.jpg"
                          alt="Save your tears - The weeknd"
                          class="track__poster"
                          width="180"
