all main functions of player ready

--- a/index.html
+++ b/index.html
@@ -46,206 +46,8 @@
     <section class="catalog">
         <h2 class="visually-hidden">Список треков</h2>
         <div class="catalog__container">
-            <button class="catalog__item track" data-track="audio/The weeknd - Save your tears.mp3">
-                <div class="track__img-wrap">
-                    <img src="img/photo1.jpg"
-                         alt="The weeknd - Save your tears"
-                         class="track__poster"
-                         width="180"
-                         height="180"
-                    >
-                </div>
-
-                <div class="track__info track-info">
-                    <p class="track-info__title">Save your tears</p>
-                    <p class="track-info__artist">The weeknd</p>
-                </div>
-            </button>
-
-            <button class="catalog__item track" data-track="audio/Imagine Dragons - Follow You.mp3">
-                <div class="track__img-wrap">
-                    <img src="img/photo2.jpg"
-                         alt="Imagine Dragons - Follow You"
-                         class="track__poster"
-                         width="180"
-                         height="180"
-                    >
-                </div>
-
-                <div class="track__info track-info">
-                    <p class="track-info__title">Follow You</p>
-                    <p class="track-info__artist">Imagine Dragons</p>
-                </div>
-            </button>
-
-            <button class="catalog__item track" data-track="audio/">
-                <div class="track__img-wrap">
-                    <img src="img/photo3.jpg"
-                         alt="Save your tears - The weeknd"
-                         class="track__poster"
-                         width="180"
-                         height="180"
-                    >
-                </div>
-
-                <div class="track__info track-info">
-                    <p class="track-info__title"></p>
-                    <p class="track-info__artist"></p>
-                </div>
-            </button>
-
-            <button class="catalog__item track" data-track="audio/">
-                <div class="track__img-wrap">
-                    <img src="img/photo4.jpg"
-                         alt="Save your tears - The weeknd"
-                         class="track__poster"
-                         width="180"
-                         height="180"
-                    >
-                </div>
-
-                <div class="track__info track-info">
-                    <p class="track-info__title"></p>
-                    <p class="track-info__artist"></p>
-                </div>
-            </button>
-
-            <button class="catalog__item track" data-track="audio/">
-                <div class="track__img-wrap">
-                    <img src="img/photo5.jpg"
-                         alt="Save your tears - The weeknd"
-                         class="track__poster"
-                         width="180"
-                         height="180"
-                    >
-                </div>
-
-                <div class="track__info track-info">
-                    <p class="track-info__title"></p>
-                    <p class="track-info__artist"></p>
-                </div>
-            </button>
-
-            <button class="catalog__item track" data-track="audio/">
-                <div class="track__img-wrap">
-                    <img src="img/photo6.jpg"
-                         alt="Save your tears - The weeknd"
-                         class="track__poster"
-                         width="180"
-                         height="180"
-                    >
-                </div>
-
-                <div class="track__info track-info">
-                    <p class="track-info__title"></p>
-                    <p class="track-info__artist"></p>
-                </div>
-            </button>
-
-            <button class="catalog__item track" data-track="audio/">
-                <div class="track__img-wrap">
-                    <img src="img/photo7.jpg"
-                         alt="Save your tears - The weeknd"
-                         class="track__poster"
-                         width="180"
-                         height="180"
-                    >
-                </div>
-
-                <div class="track__info track-info">
-                    <p class="track-info__title"></p>
-                    <p class="track-info__artist"></p>
-                </div>
-            </button>
-
-            <button class="catalog__item track" data-track="audio/">
-                <div class="track__img-wrap">
-                    <img src="img/photo8.jpg"
-                         alt="Save your tears - The weeknd"
-                         class="track__poster"
-                         width="180"
-                         height="180"
-                    >
-                </div>
-
-                <div class="track__info track-info">
-                    <p class="track-info__title"></p>
-                    <p class="track-info__artist"></p>
-                </div>
-            </button>
-
-            <button class="catalog__item track" data-track="audio/">
-                <div class="track__img-wrap">
-                    <img src="img/photo9.jpg"
-                         alt="Save your tears - The weeknd"
-                         class="track__poster"
-                         width="180"
-                         height="180"
-                    >
-                </div>
-
-                <div class="track__info track-info">
-                    <p class="track-info__title"></p>
-                    <p class="track-info__artist"></p>
-                </div>
-            </button>
-
-            <button class="catalog__item track" data-track="audio/">
-                <div class="track__img-wrap">
-                    <img src="img/photo10.jpg"
-                         alt="Save your tears - The weeknd"
-                         class="track__poster"
-                         width="180"
-                         height="180"
-                    >
-                </div>
-
-                <div class="track__info track-info">
-                    <p class="track-info__title"></p>
-                    <p class="track-info__artist"></p>
-                </div>
-            </button>
-
-            <button class="catalog__item track" data-track="audio/">
-                <div class="track__img-wrap">
-                    <img src="img/photo11.jpg"
-                         alt="Save your tears - The weeknd"
-                         class="track__poster"
-                         width="180"
-                         height="180"
-                    >
-                </div>
-
-                <div class="track__info track-info">
-                    <p class="track-info__title"></p>
-                    <p class="track-info__artist"></p>
-                </div>
-            </button>
-
-            <button class="catalog__item track" data-track="audio/">
-                <div class="track__img-wrap">
-                    <img src="img/photo12.jpg"
-                         alt="Save your tears - The weeknd"
-                         class="track__poster"
-                         width="180"
-                         height="180"
-                    >
-                </div>
-
-                <div class="track__info track-info">
-                    <p class="track-info__title"></p>
-                    <p class="track-info__artist"></p>
-                </div>
-            </button>
-
             <button class="catalog__btn-add">
-                <span>Увидеть всё</span>
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M8.59 16.59L13.17 12L8.59 7.41L10 6L16 12L10 18L8.59 16.59Z"/>
-                </svg>
-
             </button>
-
         </div>
     </section>
 
@@ -268,12 +70,12 @@
 
             <div class="player__progress-wrap">
                 <div class="player__progress">
-                    <input class="player__progress-input" type="range" max="100" min="0" value="0">
+                    <input class="player__progress-input" type="range" max="10000" min="0" value="0">
                 </div>
 
                 <p class="player__time">
                     <span class="player__time-passed">0:24</span>
-                    <span class="player__time-passed">/</span>
+                    <span>/</span>
                     <span class="player__time-total">4:31</span>
                 </p>
             </div>
@@ -283,7 +85,7 @@
                     <input class="player__volume-input" type="range" max="100" min="0" value="50">
                 </div>
 
-                <button class="player__icon player__icon_condition_mute"></button>
+                <button class="player__icon player__icon_condition_volume player__controller-mute"></button>
 
 
             </div>
